--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Data Strctures
 author: Dylan Barros
-logo: assets/logo.png
+logo: assets/images/logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
